프런트 단 javascript 파일 만들기

--- a/app/src/views/home/login.ejs
+++ b/app/src/views/home/login.ejs
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <script src="/js/home/login.js"></script> <!-- app.js 에서 미들웨어 등록 필요-->
     <title>Document</title>
 </head>
 <body>
