--- a/app/src/views/home/login.ejs
+++ b/app/src/views/home/login.ejs
@@ -5,12 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <script src="/js/home/login.js"></script> <!-- app.js 에서 미들웨어 등록 필요-->
+    <script src="/js/home/login.js" defer></script> <!-- app.js 에서 미들웨어 등록 필요-->
     <title>Document</title>
 </head>
 <body>
-    <input type="text" placeholder="아이디"><br>
-    <input type="text" Placeholder="비밀번호"><br>
+    <input id="id" type="text" placeholder="아이디"><br>
+    <input id="psword" type="text" Placeholder="비밀번호"><br>
     <button>로그인</button>
 </body>
 </html>
