:회원가입 페이지 구현

--- a/app/src/views/home/register.ejs
+++ b/app/src/views/home/register.ejs
@@ -1,4 +1,4 @@
-<!-- Copyright (c) 2022 by Aigars Silkalns (https://codepen.io/colorlib/pen/rxddKy) -->
+ <!-- Copyright (c) 2022 by Aigars Silkalns (https://codepen.io/colorlib/pen/rxddKy) -->
 
 <!DOCTYPE html>
 <html lang="ko">
@@ -14,18 +14,13 @@
 <body>
     <div class="login-page">
         <div class="form">
-          <!-- <form class="register-form">
-            <input type="text" placeholder="name"/>
-            <input type="password" placeholder="password"/>
-            <input type="text" placeholder="email address"/>
-            <button>create</button>
-            <p class="message">Already registered? <a href="#">Sign In</a></p>
-          </form> -->
           <form class="login-form">
             <input id="id" type="text" placeholder="아이디"/>
+            <input id="name" type="text" placeholder="이름"/>
             <input id="psword" type="password" placeholder="비밀번호"/>
-            <button>login</button>
-            <p class="message">Not registered? <a href="/register">Create an account</a></p>
+            <input id="confirm-psword" type="password" placeholder="비밀번호 확인"/>
+            <button>SIGN UP</button>
+            <p class="message">Already registered? <a href="/login">login</a></p>
           </form>
         </div>
       </div>
